--- a/Урок 2.ipynb
+++ b/Урок 2.ipynb
@@ -128,14 +128,12 @@
     }
    ],
    "source": [
-    "n1 = 10\n",
-    "k1 = 7\n",
-    "n2 = 11\n",
-    "k2 = 9\n",
-    "\n",
-    "p1 = (k1 / n1) * (k2 / n2)\n",
-    "p2 = 1 - ((n1 - k1) / n1) * ((n2 - k2) / n2)\n",
-    "print(p1, p2)"
+    "p1 = (combinations(7, 2) / combinations(10, 2)) * (combinations(9, 2) / combinations(11, 2))\n",
+    "p1\n"
+    "p2 = combinations(7, 2) / combinations(10, 2) * 1 / combinations(11, 2) + combinations(3, 2) / combinations(10, 2) * combinations(9, 2) / combinations(11, 2) + (21 / combinations(10, 2)) * (18/ combinations(11, 2))\n",
+    "p2\n"
+    "p3 = 1 - (combinations(3, 2) / combinations(10, 2)) * (1 / combinations(11, 2))\n"
+    "p3"
    ]
   }
  ],
