--- a/Урок 2.ipynb
+++ b/Урок 2.ipynb
@@ -129,10 +129,10 @@
    ],
    "source": [
     "p1 = (combinations(7, 2) / combinations(10, 2)) * (combinations(9, 2) / combinations(11, 2))\n",
-    "p1\n"
+    "p1\n",
     "p2 = combinations(7, 2) / combinations(10, 2) * 1 / combinations(11, 2) + combinations(3, 2) / combinations(10, 2) * combinations(9, 2) / combinations(11, 2) + (21 / combinations(10, 2)) * (18/ combinations(11, 2))\n",
-    "p2\n"
-    "p3 = 1 - (combinations(3, 2) / combinations(10, 2)) * (1 / combinations(11, 2))\n"
+    "p2\n",
+    "p3 = 1 - (combinations(3, 2) / combinations(10, 2)) * (1 / combinations(11, 2))\n",
     "p3"
    ]
   }
